Login Parcial en facebook

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "cabuto",
+  "appId": "3218488191540064",
+  "appName": "Cabuto",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
