--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
   "dependencies": {
     "@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.1.6",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@capacitor/core": "2.4.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/email-composer": "^5.28.0",
+    "@ionic-native/facebook": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.0",
+    "firebase": "^7.19.1",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.6.2",
     "tslib": "^1.10.0",
@@ -42,6 +46,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "cordova-plugin-email-composer": "^0.9.2",
+    "cordova-plugin-facebook4": "^6.4.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
@@ -54,5 +60,14 @@
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-facebook4": {
+        "APP_ID": "3218488191540064",
+        "APP_NAME": "Cabuto"
+      },
+      "cordova-plugin-email-composer": {}
+    }
+  }
 }
