--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
   "dependencies": {
     "@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.6",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@capacitor/core": "2.4.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/facebook": "^5.28.0",
     "@ionic-native/http": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
+    "firebase": "^7.21.0",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.6.2",
     "tslib": "^1.10.0",
@@ -46,6 +49,7 @@
     "cordova-android": "^9.0.0",
     "cordova-plugin-advanced-http": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-facebook4": "^6.4.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -75,7 +79,11 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "1024293451317205",
+        "APP_NAME": "Cabutos"
+      }
     },
     "platforms": [
       "android"
