--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "cordova-android": "^9.0.0",
+    "cordova-android": "9.0.0",
     "cordova-plugin-advanced-http": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^6.4.0",
@@ -82,7 +82,9 @@
       "cordova-plugin-advanced-http": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "1024293451317205",
-        "APP_NAME": "Cabutos"
+        "APP_NAME": "Cabutos",
+        "FACEBOOK_HYBRID_APP_EVENTS": "false",
+        "FACEBOOK_ANDROID_SDK_VERSION": "5.13.0"
       }
     },
     "platforms": [
