--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
-    "firebase": "^7.21.0",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.23.0",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.6.2",
     "tslib": "^1.10.0",
