--- a/package.json
+++ b/package.json
@@ -84,7 +84,9 @@
       "cordova-plugin-advanced-http": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "1024293451317205",
-        "APP_NAME": "Cabutos"
+        "APP_NAME": "Cabutos",
+        "FACEBOOK_HYBRID_APP_EVENTS": "false",
+        "FACEBOOK_ANDROID_SDK_VERSION": "5.13.0"
       }
     },
     "platforms": [
