--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/facebook": "^5.28.0",
     "@ionic-native/http": "^5.28.0",
+    "@ionic-native/native-storage": "^5.29.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -55,6 +56,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -87,7 +89,8 @@
         "APP_NAME": "Cabutos",
         "FACEBOOK_HYBRID_APP_EVENTS": "false",
         "FACEBOOK_ANDROID_SDK_VERSION": "5.13.0"
-      }
+      },
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "android"
