--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/facebook": "^5.28.0",
     "@ionic-native/firebase-x": "^5.30.0",
+    "@ionic-native/geolocation": "^5.31.1",
     "@ionic-native/http": "^5.28.0",
     "@ionic-native/native-storage": "^5.29.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -61,6 +62,7 @@
     "cordova-plugin-facebook4": "^6.4.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-firebasex": "^11.0.3",
+    "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-nativestorage": "^2.3.2",
@@ -121,7 +123,10 @@
         "ANDROID_FIREBASE_PERF_GRADLE_PLUGIN_VERSION": "1.3.1"
       },
       "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-geolocation": {
+        "GPS_REQUIRED": "true"
+      }
     },
     "platforms": [
       "android",
