--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
     "angularfire2": "^5.4.2",
+    "cordova-android": "9.0.0",
+    "crypto-js": "^4.0.0",
     "firebase": "^7.23.0",
     "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.5.1",
@@ -53,7 +55,6 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "cordova-android": "^9.0.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-advanced-http": "^3.0.1",
     "cordova-plugin-androidx": "^3.0.0",
@@ -129,8 +130,8 @@
       }
     },
     "platforms": [
-      "android",
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
