--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.cabutos.starter",
+  "appId": "io.cabutos.starter.v2",
   "appName": "cabuto",
   "bundledWebRuntime": false,
   "npmClient": "npm",
