--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
     "angularfire2": "^5.4.2",
+    "cordova-ios": "6.2.0",
     "crypto-js": "^4.0.0",
-    "firebase": "^7.23.0",
+    "firebase": "^7.24.0",
     "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.6.2",
@@ -43,23 +44,23 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.15",
     "@angular/cli": "9.1.12",
-    "@angular/compiler": "~9.1.6",
-    "@angular/compiler-cli": "~9.1.6",
-    "@angular/language-service": "~9.1.6",
+    "@angular/compiler": "^9.1.13",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@capacitor/cli": "2.4.0",
     "@ionic/angular-toolkit": "^2.3.3",
     "@ionic/app-scripts": "^3.2.4",
-    "@ionic/lab": "^3.2.9",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@ionic/lab": "^3.2.10",
+    "@types/jasmine": "^3.5.14",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.33",
     "codelyzer": "^5.1.2",
     "cordova-android": "^9.1.0",
     "cordova-browser": "^6.0.0",
-    "cordova-plugin-advanced-http": "^3.0.1",
+    "cordova-plugin-advanced-http": "^3.2.2",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-facebook4": "^6.4.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-firebasex": "^11.0.3",
@@ -67,9 +68,9 @@
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-nativestorage": "^2.3.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-splashscreen": "^5.0.4",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.5",
     "cordova-sqlite-storage": "^5.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -77,7 +78,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
@@ -94,7 +95,9 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-advanced-http": {
+        "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
+      },
       "cordova-plugin-facebook4": {
         "APP_ID": "1024293451317205",
         "APP_NAME": "Cabutos",
